# hn-recap-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EPIC-2-COMPLETION-SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_BOT_DELIVERY.md  MIGRATION_STATUS.md  README.md  ROCKSDB_MIGRATION.md  SCHEDULER_IMPLEMENTATION.md  data.txt  demo_summarization.ipynb  docker-compose.yml  main.py  persona1.md  pyproject.toml  test_syntax.py
backend/: .env.example  AGENTS.md  Dockerfile  QUICK_START_SCHEDULER.md  README.md  SCHEDULER_DESIGN_INDEX.md  SCHEDULER_SUMMARY.txt  SUMMARIZATION_AGENT_TESTING.md  SUMMARIZATION_QUICK_START.md  SUMMARIZATION_SCHEDULER_BRAINSTORM.md  TEST_RESULTS_SUMMARY.txt  TRIGGER_SCHEDULER_JOB.md  alembic.ini  pyproject.toml  test_database.py  test_summarization_execution.py
backend/alembic/: env.py
backend/alembic/versions/: 20250213_add_agent_token_tracking.py  20250213_add_summaries_table.py  20260225_add_user_activity_log_table.py  38a5a14052f8_add_delivery_and_conversation_models.py  7be4bb0d3cdd_create_posts_table_with_crawl_tracking.py  aa19fc4f688a_add_foreign_keys_to_all_tables.py  ca002ecaabd2_make_summaries_user_id_required_and_add_.py  e7a718d85a59_add_summary_preferences_to_users.py
backend/app/: main.py
backend/app/application/: interfaces.py
backend/app/application/use_cases/: auth.py  collection.py  crawl_content.py  delivery_grouper.py  delivery_pipeline.py  delivery_selection.py  digests.py  grouped_delivery.py  optimized_delivery_pipeline.py  personalized_summarization.py  pipeline.py  summarization.py  summarization_agent.py  summary_preferences.py
backend/app/domain/: entities.py  exceptions.py  value_objects.py
backend/app/infrastructure/agents/: __init__.py  base_agent.py  config.py  summarization_agent.py  token_tracker.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/database/: __init__.py  base.py  models.py
backend/app/infrastructure/jobs/: __init__.py  data_collector.py  factory.py  hourly_delivery_job.py  hourly_posts_collector.py  scheduler.py
backend/app/infrastructure/prompts/: judge.md  summarizer_basic.md  summarizer_business.md  summarizer_concise.md  summarizer_personalized.md  summarizer_system_base.md  summarizer_technical.md
backend/app/infrastructure/repositories/: jsonl_content_repo.py  jsonl_digest_repo.py  jsonl_helpers.py  jsonl_post_repo.py  jsonl_user_repo.py
backend/app/infrastructure/security/: jwt_handler.py  password_hasher.py
backend/app/infrastructure/services/: content_extractor.py  crawl_status_tracker.py  enhanced_content_extractor.py  firebase_hn_client.py  hn_client.py  openai_summarization_service.py  openai_synthesis_service.py  redis_cache.py  telegram_notifier.py
backend/app/infrastructure/storage/: __init__.py  rocksdb_store.py
backend/app/presentation/api/: auth.py  deliveries.py  dependencies.py  digests.py
backend/app/presentation/bot/: __init__.py  bot.py  states.py
backend/app/presentation/schemas/: delivery.py  digest.py  user.py
backend/backend/tests/: conftest.py
backend/docs/: BOT_SETTINGS_GUIDE.md
backend/scripts/: crawl_and_store.py  create_genesis_user.py  deliver_summaries.py  evaluate_prompts.py  migrate_files_to_rocksdb.py  run_bot.py  run_delivery_daemon.py  run_personalized_summarization.py  run_scheduler.py  send_sample_message.py  test_agent_integration.py  test_rocksdb_retrieval.py  trigger_posts_collection.py  verify_agent_runner.py
backend/tests/: conftest.py  test_bot_setup.py  test_firebase_client.py  test_summarization_agent.py  test_summarization_simple.py
backend/tests/application/formatters/: test_digest_formatter.py
backend/tests/integration/: test_bot_settings.py
backend/tests/llm_as_a_judge/: evaluate_prompts.py
backend/tests/unit/: test_summary_preferences.py
(+119 files in other folders)
