[project]
name = "hackernews-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.25.0",
    "apscheduler>=3.11.2",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "langfuse>=3.14.1",
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "pydantic>=2.12.3",
    "redis>=7.1.1",
    "ruff>=0.14.2",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
]
